# linux_detect_tablet_mode

kde/: CMakeLists.txt  README.md  install.sh
kde/core/: CMakeLists.txt  main.cpp  tabletwatcher.cpp  tabletwatcher.h  watch_tabletrc
kde/kcm/: CMakeLists.txt  kcm.cpp  kcm.h  kcm.ui  kcm_watch_tablet.desktop
